More recommendations from Sara

--- a/resume.tex
+++ b/resume.tex
@@ -30,7 +30,7 @@
 \lastupdated
 \namesection{Paul}{Kiernan}{
     \urlstyle{same}\url{http://paulynomial.com} \\
-    \href{mailto:pak79@cornell.edu}{pak79@cornell.edu} | 646.369.6726
+    \href{mailto:pak79@cornell.edu}{pak79@cornell.edu} \hspace{1mm}|\hspace{1mm} 646.369.6726
 }
 
 \section{Education}
@@ -48,9 +48,10 @@
     \descript{Software Developer}
     \begin{tightemize}
         \item
-            Developed the full-stack behind Moat Pro, an enterprise
-            ad-intelligence platform that allows markets to research trends
-            in the online advertising industry.
+            One of three engineers responsible for the development of the
+            full-stack behind Moat Pro, an enterprise ad-intelligence platform
+            that allows clients to research trends in the online advertising
+            industry.
         \item
             Developed network of autonomous web crawlers (Moatbots) capable
             of programmatically detecting, capturing, and indexing online
@@ -82,8 +83,8 @@
             engagement data to build reports on site usage patterns and
             behaviour.
         \item
-            Deployed a Jenkins continuous integration server for
-            regression testing.
+            Encouraged testing and deployed a Jenkins continuous integration
+            server for detecting regressions
         \item
             Developed homebrew heterogeneous server role and configuration
             deployment system in Amazon’s EC2.
@@ -111,18 +112,16 @@
             \begin{tightemize}
                 \item
                     Worked with \custombold{\href{http://www.cs.cornell.edu/~asaxena/}{
-                    Prof. Ashutosh Saxena}} to create a supervised learning algorithm
-                    for finding good object placements using point-clouds of an object
-                    and its surrounding area.
+                    Prof. Ashutosh Saxena}} to create a supervised learning
+                    algorithm for finding good object placements using
+                    point-clouds of an object and its surrounding area
                 \item
-                    Implemented the algorithm on an Adept
-                    Viper s850 robotic arm equipped with a Microsoft Kinect.
-                \item
-                    SVM models
-                    built from our training examples attained performances in excess of
-                    80\% for both precision and recall on both flat and non-flat
-                    surface placement.
-                    \custombold{\href{http://www.cs.cornell.edu/courses/CS4758/2011sp/final_projects/spring_2011/Yang_Lyons_Kiernan.pdf}{Publication}}.
+                    SVM models built from our training examples attained
+                    performances in excess of 80\% for both precision and
+                    recall on both flat and non-flat surface placement by 
+                    %an Adept Viper s850
+                    a robotic arm
+                    equipped with a Microsoft Kinect.
             \end{tightemize}
     \sectionsep
 
@@ -131,9 +130,9 @@
         \descript{Power Subteam Member}
             \begin{tightemize}
                 \item
-                    Designed and fabricated the ATxmega128 based power distribution
-                    system for Cornell’s operationally responsive, high agility
-                    space imaging system codenamed 'Violet'.
+                    Designed and fabricated the ATxmega128 based power
+                    distribution system for Cornell’s operationally responsive,
+                    high agility space imaging system codenamed 'Violet'.
             \end{tightemize}
     \sectionsep
 
