--- a/resume.tex
+++ b/resume.tex
@@ -51,43 +51,28 @@
             One of three engineers responsible for the development of the
             full-stack behind Moat Pro, an enterprise ad-intelligence platform
             that allows clients to research trends in the online advertising
-            industry.
+            industry
         \item
-            Developed network of autonomous web crawlers (Moatbots) capable
-            of programmatically detecting, capturing, and indexing online
-            advertisements.
-        %\item
-            %Extended Moatbots to index rich-media advertisements in
-            %addition to traditional Standard IAB formats.
-        %\item
-            %Extended Moatbots to include regional indexing capabilities,
-            %e.g.- develop a representation of the UK ad landscape by
-            %proxying traffic through UK servers.
+            Created a network of web crawlers capable of programmatically
+            detecting, capturing, and indexing online advertisements across
+            different geographical regions
         \item
-            Developed ETL for consuming warehoused Moatbot data and
-            transforming it into an optimized, queryable form.
-        %\item
-            %Refactored ETL to aggregate indexed results across different
-            %regions.
+            Designed ETL pipeline for aggregating warehoused index results
         \item
-            Developed API to cache architecture for client side report
-            generation and Pyramid application to serve reports.
+            Developed API for aggregate results and Pyramid web application for
+            serving reports to clients
         \item
-            Developed autocomplete service for web application that served
-            as the primary means of directing site traffic.
+            Created global navigation autocomplete service for web application
         \item
-            Developed Pyramid middleware for logging user engagement with
-            the client-facing brand intelligence tool.
-        \item
-            Developed homebrew real-time analytics tool for consuming
-            engagement data to build reports on site usage patterns and
-            behaviour.
+            Created Pyramid middleware for logging user engagement with
+            webapp and real-time analytics application for building reports on
+            usage patterns and behaviour
         \item
             Encouraged testing and deployed a Jenkins continuous integration
             server for detecting regressions
         \item
             Developed homebrew heterogeneous server role and configuration
-            deployment system in Amazon’s EC2.
+            deployment system in Amazon’s EC2
     \end{tightemize}
 \sectionsep
 
@@ -98,10 +83,10 @@
         \item
             Designed, installed, and serviced solutions for a network of
             high-performance computational nodes used in the study of beams
-            and accelerators, photon science, and particle physics.
+            and accelerators, photon science, and particle physics
         \item
             Managed a network of Linux nodes responsible for serving the
-            department’s administrative tasks.
+            department’s administrative tasks
     \end{tightemize}
 \sectionsep
 
@@ -132,7 +117,7 @@
                 \item
                     Designed and fabricated the ATxmega128 based power
                     distribution system for Cornell’s operationally responsive,
-                    high agility space imaging system codenamed 'Violet'.
+                    high agility space imaging system codenamed 'Violet'
             \end{tightemize}
     \sectionsep
 
