Synonyms for developed

--- a/resume.tex
+++ b/resume.tex
@@ -53,7 +53,7 @@
             that allows clients to research trends in the online advertising
             industry
         \item
-            Created a network of web crawlers capable of programmatically
+            Engineered a network of web crawlers capable of programmatically
             detecting, capturing, and indexing online advertisements across
             different geographical regions
         \item
@@ -62,16 +62,16 @@
             Developed API for aggregate results and Pyramid web application for
             serving reports to clients
         \item
-            Created global navigation autocomplete service for web application
+            Developed global navigation autocomplete service for web application
         \item
             Created Pyramid middleware for logging user engagement with
             webapp and real-time analytics application for building reports on
             usage patterns and behaviour
         \item
-            Encouraged testing and deployed a Jenkins continuous integration
+            Encouraged testing and installed a Jenkins continuous integration
             server for detecting regressions
         \item
-            Developed homebrew heterogeneous server role and configuration
+            Implemented homebrew heterogeneous server role and configuration
             deployment system in Amazon’s EC2
     \end{tightemize}
 \sectionsep
