--- a/resume.tex
+++ b/resume.tex
@@ -27,7 +27,7 @@
 \begin{document}
 
 % Header
-\lastupdated
+%\lastupdated
 \namesection{Paul}{Kiernan}{
     \urlstyle{same}\url{http://paulynomial.com} \\
     \href{mailto:pak79@cornell.edu}{pak79@cornell.edu} \hspace{1mm}|\hspace{1mm} 646.369.6726
@@ -37,8 +37,12 @@
     \runsubsection{Cornell University}
         \location{\hfill May 2012}
         \descript{BS in Electrical and Computer Engineering}
-        \hspace{22pt} Double Concentration in Electrical Engineering and Computer Science \\
-        \hspace{22pt} Honors: John McMullen Dean Scholar, Goldfarb Tradition Fellow \\
+        \begin{tightemize}
+        \item
+            Double Concentration in Electrical Engineering and Computer Science
+        \item
+            Honors: John McMullen Dean Scholar, Goldfarb Tradition Fellow
+        \end{tightemize}
 \sectionsep
 
 \section{Experience}
@@ -86,7 +90,7 @@
             and accelerators, photon science, and particle physics
         \item
             Managed a network of Linux nodes responsible for serving the
-            department’s administrative tasks
+            department's administrative tasks
     \end{tightemize}
 \sectionsep
 
@@ -96,17 +100,17 @@
         \descript{Undergraduate Researcher}
             \begin{tightemize}
                 \item
-                    Worked with \custombold{\href{http://www.cs.cornell.edu/~asaxena/}{
-                    Prof. Ashutosh Saxena}} to create a supervised learning
+                    Worked with \href{http://www.cs.cornell.edu/~asaxena/}{
+                    Prof. Ashutosh Saxena} to create a supervised learning
                     algorithm for finding good object placements using
                     point-clouds of an object and its surrounding area
                 \item
-                    SVM models built from our training examples attained
+                    Built SVM models from training examples that attained
                     performances in excess of 80\% for both precision and
-                    recall on both flat and non-flat surface placement by 
+                    recall on both flat and non-flat surface placement by
                     %an Adept Viper s850
                     a robotic arm
-                    equipped with a Microsoft Kinect.
+                    equipped with a Microsoft Kinect
             \end{tightemize}
     \sectionsep
 
