--- a/resume.tex
+++ b/resume.tex
@@ -47,8 +47,24 @@
 
 \section{Experience}
 
-\runsubsection{\href{http://www.moat.com/}{Moat}}
-    \location{\hfill May 2012 – Present}
+\runsubsection{\href{http://www.chartbeat.com/}{Chartbeat Inc.}}
+    \location{\hfill August 2014 – Present}
+    \descript{Software Developer}
+    \begin{tightemize}
+        \item
+            Ad Refresh Technical Team Lead
+        \item
+            Rosetta Stone (DFP translation)
+        \item
+            Redshift workers and stuff
+        \item
+            Teaching non-technical members of the company programming through
+            the "Learn Python the Hard Way" online curriculum
+    \end{tightemize}
+\sectionsep
+
+\runsubsection{\href{http://www.moat.com/}{Moat Inc.}}
+    \location{\hfill May 2012 – August 2014}
     \descript{Software Developer}
     \begin{tightemize}
         \item
