Add last updated section back into the resume

--- a/resume.tex
+++ b/resume.tex
@@ -27,7 +27,7 @@
 \begin{document}
 
 % Header
-%\lastupdated
+\lastupdated
 \namesection{Paul}{Kiernan}{
     \urlstyle{same}\url{http://paulynomial.com} \\
     \href{mailto:pak79@cornell.edu}{pak79@cornell.edu} \hspace{1mm}|\hspace{1mm} 646.369.6726
