--- a/resume_template.tex
+++ b/resume_template.tex
@@ -30,53 +30,36 @@
 \lastupdated
 \namesection{Paul}{Kiernan}{
     \urlstyle{same}\url{http://paulynomial.com} \\
-    \href{mailto:hi@paulynomial.com}{hi@paulynomial.com} \hspace{1mm}|\hspace{1mm} 646.369.6726
+    \href{mailto:pak79@cornell.edu}{pak79@cornell.edu} \hspace{1mm}|\hspace{1mm} 646.369.6726
 }
+
+\section{Education}
+    \runsubsection{Cornell University}
+        \location{\hfill May 2012}
+        \descript{BS in Electrical and Computer Engineering}
+        \begin{tightemize}
+        \item
+            Double Concentration in Electrical Engineering and Computer Science
+        \item
+            Honors: John McMullen Dean Scholar, Goldfarb Tradition Fellow
+        \end{tightemize}
+\sectionsep
 
 \section{Experience}
 
 \runsubsection{\href{http://www.chartbeat.com/}{Chartbeat Inc.}}
-    \location{\hfill October 2015 – Present}
-    \descript{Backend Developer Team Lead}
+    \location{\hfill August 2014 – Present}
+    \descript{Software Developer}
     \begin{tightemize}
-        \item
-            Using Neural Networks for fun and profit
-        \item
-            Technical Team Lead for a research and development arm of the
-            company responsible for developing new and experimental products for
-            Chartbeat
-        \item
-            Implemented Robust Principal Component Analysis outlier detection
-            for surfacing anomolous traffic patterns in topics published on the
-            Chartbeat network
-        \item
-            Developer real-time targeting platform for distributers like Kargo
-            to use for targeting trending material
-        \item
-            Developed share of voice benchmarking tool to aid publishers in
-            measuring their contribution to a topic discussion on the web
-        \item
-            Presented new research and prototype products to the company board
-            to communicate the state of current experimental projects
-        \item
-            Instructed a recurring Python language class covering advanced
-            features of the language such as writing custom C extensions and
-            debugging workflows
-    \end{tightemize}
-
-    \location{\hfill August 2014 – October 2015}
-    \descript{Backend Developer}
-    \begin{tightemize}
-        \item
-            DFP Campaign screenshotter for indexing ad creatives over time
-        \item
-            Line Item Recommendation Worker
-        \item
-            Rosetta Stone
-
-        % Drunk stuff
         \item
             Ad Refresh Technical Team Lead
+        \item
+            Rosetta Stone (DFP translation)
+        \item
+            Redshift workers and stuff
+        \item
+            Teaching non-technical members of the company programming through
+            the "Learn Python the Hard Way" online curriculum
     \end{tightemize}
 \sectionsep
 
@@ -113,17 +96,50 @@
     \end{tightemize}
 \sectionsep
 
-\section{Education}
-    \runsubsection{Cornell University}
-        \location{\hfill May 2012}
-        \descript{BS in Electrical and Computer Engineering}
-        \begin{tightemize}
+\runsubsection{Cornell Laboratory for Elementary-Particle Physics}
+    \location{\hfill Jan 2009– May 2012}
+    \descript{Lead Linux Infrastructure Consultant}
+    \begin{tightemize}
         \item
-            Double Concentration in Electrical Engineering and Computer Science
+            Designed, installed, and serviced solutions for a network of
+            high-performance computational nodes used in the study of beams
+            and accelerators, photon science, and particle physics
         \item
-            Honors: John McMullen Dean Scholar, Goldfarb Tradition Fellow
-        \end{tightemize}
+            Managed a network of Linux nodes responsible for serving the
+            department's administrative tasks
+    \end{tightemize}
 \sectionsep
+
+\section{Research}
+    \runsubsection{Cornell Robot Learning Lab}
+        \location{\hfill Jan 2011 – Mar 2011}
+        \descript{Undergraduate Researcher}
+            \begin{tightemize}
+                \item
+                    Worked with \href{http://www.cs.cornell.edu/~asaxena/}{
+                    Prof. Ashutosh Saxena} to create a supervised learning
+                    algorithm for finding good object placements using
+                    point-clouds of an object and its surrounding area
+                \item
+                    Built SVM models from training examples that attained
+                    performances in excess of 80\% for both precision and
+                    recall on both flat and non-flat surface placement by
+                    %an Adept Viper s850
+                    a robotic arm
+                    equipped with a Microsoft Kinect
+            \end{tightemize}
+    \sectionsep
+
+    \runsubsection{Cornell Space Systems Design Studio}
+        \location{\hfill May 2010 – Dec 2010}
+        \descript{Power Subteam Member}
+            \begin{tightemize}
+                \item
+                    Designed and fabricated the ATxmega128 based power
+                    distribution system for Cornell’s operationally responsive,
+                    high agility space imaging system codenamed 'Violet'
+            \end{tightemize}
+    \sectionsep
 
 \begin{minipage}[t]{0.42\textwidth}
     \section{Programming Skills}
@@ -159,7 +175,7 @@
 \begin{minipage}[t]{0.22\textwidth}
     \section{Links}
         Github:// \href{https://github.com/paulkiernan}{\custombold{paulkiernan}}\\
-        LinkedIn:// \href{https://www.linkedin.com/pub/paul-kiernan/24/a32/470}{\custombold{paulynomial}}\\
+        LinkedIn:// \href{https://www.linkedin.com/pub/paul-kiernan/24/a32/470}{\custombold{paulkiernan}}\\
         Twitter:// \href{https://twitter.com/gaelic}{\custombold{@gaelic}}\\
 \end{minipage}
 \end{document}
