Add the header for Director of Backend (but no content)

--- a/resume.tex
+++ b/resume.tex
@@ -36,7 +36,14 @@
 \section{Experience}
 
 \runsubsection{\href{http://www.chartbeat.com/}{Chartbeat Inc.}}
-    \location{\hfill October 2015 – Present}
+    \location{\hfill October 2016 – Present}
+    \descript{Director of Backend Development}
+    \begin{tightemize}
+        \item
+            Figure it out, Paul!
+    \end{tightemize}
+
+    \location{\hfill October 2015 – October 2016}
     \descript{Backend Developer Team Lead}
     \begin{tightemize}
         \item
@@ -44,7 +51,7 @@
         \item
             Technical Team Lead for a research and development arm of the
             company responsible for developing new and experimental products for
-            Chartbeat
+            Chartbeat -- Goby/Guppy!
         \item
             Implemented Robust Principal Component Analysis outlier detection
             for surfacing anomolous traffic patterns in topics published on the
