Add links back inoto the resum

--- a/resume.tex
+++ b/resume.tex
@@ -39,16 +39,17 @@
     \location{\hfill October 2016 – Present}
     \begin{tightemize}
         \item
-            Built a replicated C++ key-value store capable of writing over 500k
-            records/sec and computing arbitrary views on stored data defined at
-            runtime via Lua. Persisted data in a LMDB copy-on-write b-tree that
-            supports transactions, snapshots, multiple non-blocking readers +
-            single writer, and scales reads linearly with number of CPUs. Used
-            Chain Replication to persist data across nodes
+            Built "MrRoboto," a replicated C++ key-value store capable of
+            writing over 500k records/sec and computing arbitrary views,
+            defined at runtime, on stored data. Persisted data in a LMDB
+            copy-on-write b-tree that supports transactions, snapshots,
+            multiple non-blocking readers + single writer, and scales reads
+            linearly with CPU cores. Used Chain Replication to persist data
+            across nodes
         \item
             Built "Miata", a convenient real-time streaming analytics framework
-            for prototyping products built from Chartbeat's data firehose.
-            Framework synthesized high-throughput ZeroMQ, Kafka, and Python
+            for prototyping products using Chartbeat's streaming data firehose
+            using Kafka, ZeroMQ and Python
         \item
             Led a team of 8 backend engineers across 4 product teams. Conducted
             weekly 1-on-1s with each team member and advised each on personal,
@@ -63,9 +64,9 @@
     \begin{tightemize}
         \item
             Led research and development team responsible for prototyping new
-            and experimental products. Presented new research and products
-            products to the company board and communicated the state of active
-            experiments
+            and experimental products. Presented research and new products to
+            the Board and communicated the progress of active experiments to
+            the company
         \item
             Built "Goby," a dashboard for communicating the most engaging
             articles (by time) active within the Chartbeat news network at the
@@ -75,7 +76,7 @@
             measuring their contribution to a news topic
         \item
             Created real-time targeting platform for ad distributors to
-            identify articles with high engagement
+            identify and monetize articles with high engagement
         \item
             Implemented Robust Principal Component Analysis (RPCA) outlier
             detection for surfacing anomalous traffic patterns in topics
@@ -101,9 +102,9 @@
             Built system for indexing screenshots of advertisement creatives
             over time
         \item
-            Designed and contributed to many of Chartbeat's APIs
+            Primary backend engineer behind "Loveboat," Chartbeat Advertising's
+            V2 APIs
     \end{tightemize}
-\sectionsep
 
 \runsubsection{\href{http://www.moat.com/}{Moat Inc. \\}}
     \descript{Backend Developer}
@@ -122,7 +123,6 @@
             Implemented homebrew heterogeneous server role and configuration
             deployment system in Amazon EC2
     \end{tightemize}
-\sectionsep
 
 \section{Education}
     \runsubsection{Cornell University}
@@ -130,11 +130,14 @@
     \location{\hfill May 2012}
     \begin{tightemize}
     \item
-        John McMullen Dean Scholar, Goldfarb Tradition Fellow
+        Honors: John McMullen Dean Scholar, Goldfarb Tradition Fellow
+    \item
+        Slope Media Vice President of Production and Technology
+    \item
+        University Nanosat 6 Power Subsystem Engineer
     \end{tightemize}
-\sectionsep
 
-\begin{minipage}[t]{0.60\textwidth}
+\begin{minipage}[t]{0.38\textwidth}
     \section{Programming Skills}
     \custombold{\meow{Expert:}}
         Python \\
@@ -143,16 +146,18 @@
         C \textbullet{}
         Java \textbullet{}
         Clojure \textbullet{}
-        Shell \textbullet{}
+        Shell\\
+        \hspace{50pt}
+        Redshift \textbullet{}
         SQL \textbullet{}
-        Redshift \\
+        Kafka\\
     \meow{Familiar:}
         JavaScript \textbullet{}
         CSS \textbullet{}
         PHP \\
 \end{minipage}
 \hfill
-\begin{minipage}[t]{0.39\textwidth}
+\begin{minipage}[t]{0.38\textwidth}
     \section{Interests}
         Cooking \textbullet{}
         Surfing \textbullet{}
@@ -160,7 +165,15 @@
         Fusion Engineering \textbullet{}
         Miyazaki Films \\
         Ceramics \textbullet{}
-        Aerospace Engineering \textbullet{}
-        Music 
+        Aerospace Engineering \\
+        Music \textbullet{}
+        Interactive Art Projects
+\end{minipage}
+\hfill
+\begin{minipage}[t]{0.22\textwidth}
+    \section{Links}
+        Github:// \href{https://github.com/paulkiernan}{\custombold{paulkiernan}}\\
+        LinkedIn:// \href{https://www.linkedin.com/in/paulkiernan1}{\custombold{paulkiernan1}}\\
+        Twitter:// \href{https://twitter.com/gaelic}{\custombold{@gaelic}}\\
 \end{minipage}
 \end{document}
