Update linked in link

--- a/resume.tex
+++ b/resume.tex
@@ -173,7 +173,7 @@
 \begin{minipage}[t]{0.22\textwidth}
     \section{Links}
         Github:// \href{https://github.com/paulkiernan}{\custombold{paulkiernan}}\\
-        LinkedIn:// \href{https://www.linkedin.com/in/paulkiernan1}{\custombold{paulkiernan1}}\\
+        LinkedIn:// \href{https://www.linkedin.com/in/paulygon}{\custombold{paulygon}}\\
         Twitter:// \href{https://twitter.com/gaelic}{\custombold{@gaelic}}\\
 \end{minipage}
 \end{document}
