Dockerize pdf resume generation

--- a/tex/resume.tex
+++ b/tex/resume.tex
@@ -14,11 +14,18 @@
 
 \section{Experience}
 \runsubsection{\href{http://www.reddit.com/}{Reddit Inc.\\}}
-    \descript{Senior Software Engineer II}
-    \location{\hfill July 2018 - Right Meow}
+    \descript{Staff Software Engineer}
+    \location{\hfill August 2019 - Right Meow}
     \begin{tightemize}
         \item
-            Director of Dank Memes
+            Global Director of Dank Memes
+    \end{tightemize}
+
+    \descript{Senior Software Engineer II}
+    \location{\hfill July 2018 - August 2019}
+    \begin{tightemize}
+        \item
+            Junior Director of Dank Memes
     \end{tightemize}
 
 \runsubsection{\href{http://www.chartbeat.com/}{Chartbeat Inc.\\}}
